# ossia-monorepo

./: .gitignore  README.md  ashutov_application.md  docker-compose.yaml  final_application.md  final_scripts.md  first_code.md
old/: ashutov_userscripts.md
project/: docker-compose.yaml  nginx.conf
project/certs/: cert.pem  key.pem
project/ossia-frontend/: package-lock.json  package.json
project/ossia-frontend/app/: app.vue
project/ossia-sync-service/: Dockerfile  main.py  pyproject.toml
project/ossia-track-service/: Dockerfile  main.py  pyproject.toml  zipper.py
project/ossia-user-service/: Dockerfile  main.py  pyproject.toml
pulsola-frontend/: nuxt.config.ts
pulsola-frontend/app/: app.config.ts
pulsola-sync-service/: Dockerfile  main.py  pyproject.toml  test.py
pulsola-sync-service/pulsola/sync/: config.py  enum.py
pulsola-sync-service/pulsola/sync/core/: server.py
pulsola-sync-service/pulsola/sync/dependencies/: broker.py  common.py  security.py
pulsola-sync-service/pulsola/sync/routes/: _router.py  broker.py
pulsola-sync-service/pulsola/sync/routes/session/: common.py  session_id.py
pulsola-sync-service/pulsola/sync/schemas/: session.py  ws.py
pulsola-sync-service/pulsola/sync/services/: session.py
pulsola-sync-service/pulsola/sync/ws/: events.py
pulsola-track-service/: Dockerfile  main.py  pyproject.toml  test.py
pulsola-track-service/pulsola/common/: propdict.py
pulsola-track-service/pulsola/tracks/core/: server.py
pulsola-track-service/pulsola/tracks/database/: models.py
pulsola-track-service/pulsola/tracks/datamodels/: tracks.py
pulsola-track-service/pulsola/tracks/dependencies/: __init__.py  broker.py  database.py  security.py
pulsola-track-service/pulsola/tracks/routes/: __init__.py  _router.py  broker.py
pulsola-track-service/pulsola/tracks/routes/creators/: __init__.py  _router.py  common.py  creator_id.py  creator_tracks.py
pulsola-track-service/pulsola/tracks/routes/tracks/: __init__.py  _router.py  common.py  track_id.py
pulsola-track-service/pulsola/tracks/services/: covers.py  download.py  encode.py  ffmpeg.py  s3.py
pulsola-track-service/pulsola/tracks/telemetry/: __init__.py  setup.py
pulsola-user-service/: Dockerfile  main.py  pyproject.toml
pulsola-user-service/pulsola/common/: propdict.py
pulsola-user-service/pulsola/users/: dependencies.py
pulsola-user-service/pulsola/users/core/: server.py
pulsola-user-service/pulsola/users/database/: models.py
pulsola-user-service/pulsola/users/routes/: __init__.py  _router.py  broker.py  me.py  oauth.py
pulsola-user-service/pulsola/users/schemas/: broker.py  users.py
pulsola-user-service/pulsola/users/services/: auth.py
(+118 files in other folders)
