[project]
name = "pulsola-sync-service"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.12.2"
dependencies = [
    "fastapi>=0.116.1",
    "faststream[rabbit]>=0.5.48",
    "granian>=2.5.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "starlette>=0.47.2",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.8",
]
prod = [
    "granian[uvloop]>=2.5.0",
    "uvloop>=0.21.0",
]
